DCP-000: Fixed the schedule tab alignment.

--- a/docroot/themes/custom/dcp/sass/pages/_schedule.scss
+++ b/docroot/themes/custom/dcp/sass/pages/_schedule.scss
@@ -302,8 +302,9 @@
 
 .quicktabs-wrapper {
   .item-list {
-    width: 40%;
-    margin: 80px auto 60px auto;
+    width: 25%;
+    margin: 80px auto 20px auto;
+    text-align: center;
 
     ul {
       padding: 20px;
@@ -313,6 +314,7 @@
         border: 1.5px solid $light-grey;
         box-sizing: border-box;
         margin: 0;
+        padding: 20px 0;
 
         &:nth-child(1) {
           border-top-left-radius: 10px;
@@ -337,6 +339,7 @@
           text-decoration: none;
           text-transform: uppercase;
           color: $form-select;
+          padding: 20px 20%;
 
           &:hover {
             color: $black;
